css/layout.css
.hidden {
  display: none !important;
}

* {
  box-sizing: border-box;
}

.container {
  max-width: 575px;
  margin: 0 auto;
  padding: 0 1.5rem;
}

.row {
  display: flex;
  flex-wrap: wrap;
}

.column-half {
  display: flex;
  flex-direction: column;
}

input,
label {
  display: block;
}

input {
  width: 100%;
}

.column-full,
.column-half {
  width: 100%;
}

@media screen and (min-width: 768px) {
  .container {
    max-width: 900px;
  }

  .column-full,
  .column-half {
    padding: 0 0.75rem;
  }

  .column-half {
    width: 50%;
  }
}

